Adding HTML divs and decided on font-family

--- a/index.html
+++ b/index.html
@@ -8,6 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
+    
+    <div class="board">
+        <div id="question-box" class="hide">
+            <div id="questions">Questions</div>
+            <div id="answers">
+                <button class="button">Answer 1</button>
+                <button class="button">Answer 2</button>
+                <button class="button">Answer 3</button>
+                <button class="button">Answer 4</button>
+            </div>
+        </div>
+        <div class="controls">
+            <button id="start">Start</button>
+            <button id="continue">Continue</button>
+        </div>
+    </div>
+
+
+
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
+
+<!-- 
+5 Categories -- 6 questions each
+everything in one big box/container
+1 box container for categories
+box container for question
+each answer button -- 2 reds 1 green
+continue button
+pop up correct or incorrect
+randomly pick questions
+start button
+-->
