Edited HTML and Inputed the framework - CSS

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
-    
+
     <div class="board">
         <div id="question-box" class="hide">
+            <div class="category">Category</div>
             <div id="questions">Questions</div>
-            <div id="answers">
+            <div id="answers" class="answer-btn">
                 <button class="button">Answer 1</button>
                 <button class="button">Answer 2</button>
                 <button class="button">Answer 3</button>
