Edited HTML (added classes to hide content), Finished CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>What You Know About It</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,9 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
 
     <div class="board">
-        <div id="question-box" class="hide">
+        <div id="question-box" class="hide-content">
             <div class="category">Category</div>
-            <div id="questions">Questions</div>
+            <div class="questions">Questions</div>
             <div id="answers" class="answer-btn">
                 <button class="button">Answer 1</button>
                 <button class="button">Answer 2</button>
@@ -26,7 +26,7 @@
         </div>
         <div class="controls">
             <button id="start">Start</button>
-            <button id="continue">Continue</button>
+            <button id="continue" class="hide-content">Continue</button>
         </div>
     </div>
 
