Trying to make buttons functionally

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <div class="board">
         <div id="question-box" class="hide-content">
-            <div class="category">Category</div>
-            <div class="questions">Questions</div>
+            <div id="category">Category</div>
+            <div id="questions">Questions</div>
             <div id="answers" class="answer-btn">
                 <button class="button">Answer 1</button>
                 <button class="button">Answer 2</button>
@@ -39,8 +39,11 @@
 </body>
 </html>
 
+
+
+
 <!-- 
-5 Categories -- 6 questions each
+5 Categories -- 4 questions each
 everything in one big box/container
 1 box container for categories
 box container for question
