Redid HTML and CSS - 'DRY' code/readable and less confusing variable names, editing script.js to coincide with new HTML

--- a/index.html
+++ b/index.html
@@ -12,44 +12,51 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
-
-    <div class="board">
-        <div id="question-box" class="hide-content">
-            <div id="category">Category</div>
-            <div id="questions">Questions</div>
-            <div id="answers" class="answer-btn">
-                <button class="button">Answer 1</button>
-                <button class="button">Answer 2</button>
-                <button class="button">Answer 3</button>
-                <button class="button">Answer 4</button>
-            </div>
+    <div class="question-box hide">
+        <div class="category">
+            <!-- Geography -->
         </div>
-        <div class="controls">
-            <button id="start">Start</button>
-            <button id="continue" class="hide-content">Continue</button>
+        <div class="questions-text">
+            <!-- Which two U.S. states don't observe Daylight Saving Time? -->
+        </div>
+        <h1 class="correct-text hide">Correct</h1>
+        <h1 class="incorrect-text hide">Incorrect</h1>
+        <div class="answers-box">
+            <!-- <div class="option">CA and WA</div>
+            <div class="option">NM and UT</div>
+            <div class="option">HI and AZ</div>
+            <div class="option">FL and AL</div> -->
+        </div>
+        <div class="continue-next-question">
+            <button class="button">Continue</button>
         </div>
     </div>
 
 
 
 
+    <!-- <div class="board">
+        <div id="question-box" class="hide-content">
+            <div class="category">
 
+            </div>
+            <div class="questions-text">
 
+            </div>
+
+            <h1 class="correct hide-content">CORRECT</h1>
+            <h1 class="incorrect hide-content">INCORRECT</h1>
+
+            <div class="answers-box">
+                
+            </div>
+        </div>
+
+        <div class="controls">
+            <button class="start">Start</button>
+            <button class="continue" class="hide-content">Continue</button>
+        </div>
+    </div> -->
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-<!-- 
-5 Categories -- 4 questions each
-everything in one big box/container
-1 box container for categories
-box container for question
-each answer button -- 2 reds 1 green
-continue button
-pop up correct or incorrect
-randomly pick questions
-start button
--->
