Working logic on displaying question and answers - and indication on correct answer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
-    <div class="question-box hide">
+    <div class="question-box">
         <div class="category">
             <!-- Geography -->
         </div>
@@ -22,41 +22,12 @@
         <h1 class="correct-text hide">Correct</h1>
         <h1 class="incorrect-text hide">Incorrect</h1>
         <div class="answers-box">
-            <!-- <div class="option">CA and WA</div>
-            <div class="option">NM and UT</div>
-            <div class="option">HI and AZ</div>
-            <div class="option">FL and AL</div> -->
         </div>
         <div class="continue-next-question">
             <button class="button">Continue</button>
         </div>
     </div>
 
-
-
-
-    <!-- <div class="board">
-        <div id="question-box" class="hide-content">
-            <div class="category">
-
-            </div>
-            <div class="questions-text">
-
-            </div>
-
-            <h1 class="correct hide-content">CORRECT</h1>
-            <h1 class="incorrect hide-content">INCORRECT</h1>
-
-            <div class="answers-box">
-                
-            </div>
-        </div>
-
-        <div class="controls">
-            <button class="start">Start</button>
-            <button class="continue" class="hide-content">Continue</button>
-        </div>
-    </div> -->
     <script src="script.js"></script>
 </body>
 </html>
