Able to get the whole game centered in the view sceen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="start-screen">
         <button class="button">Start</button>
     </div>
+
     <div class="gameBoard">
 
         <div class="question-box hide">
@@ -33,7 +34,7 @@
                 <button class="button">Continue</button>
             </div>
             <div class="score-board-btn hide">
-                <button class="button">Scoreboard</button>
+                <button class="button">Game Over</button>
             </div>
         </div>
         
