Added background and started making a scoreboard

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
-
     <div class="start-screen">
         <button class="button">Start</button>
     </div>
@@ -41,9 +40,9 @@
         <div class="score-box hide">
             <div class="scoreboard">Scoreboard</div>
             <div class="player-name"></div>
-            Usename: <input type="text" id="myText" value=" ">
-            <button class="btn" onclick="enterName()">Enter</button>
-            <div class="score">100</div>
+            <input type="text" id="myText" value="Usename">
+            <button class="btn">Enter</button>
+            <div class="score"></div>
             <div class="restart-btn">
                 <button class="button">Restart</button>
             </div>
