--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What You Know About It</title>
+    <title>What You Know About It?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
